# phpbtp-client

./: .gitignore  .gitmodules  Build.md  CMakeLists.txt  Doxyfile  README.md  Readme.md  btp_push.cpp  btp_push.hpp  btpphp-client.cpp  dir_63dad20f829d1fa66f32c653c40418de.html  index.html  main.cpp  md_docs_md_api.html  md_docs_md_build.html  pages.html  wamba-ci.yml
.ci/: merge-request.yml  night.yml  settings.yml
.ci/.orig/: .gitlab-ci.yml  wamba-ci.yml
.ci/.orig/.ci/: matrix.yml  merge-request.yml  settings.yml
.ci/.orig/.ci/matrix/: deploy.yml
.cppcheck/: suppressions.txt
cmake/: ci.cmake
configurations/: Makefile  phpbtp-client.conf  phpbtp-client.ini  test.php
deploy/: Makefile  btpphp-client.ini  test.php
docs-md/: api.md  build.md
extension/: Makefile  Makefile-install  main.cpp  phpbtp-client.conf  phpbtp-client.cpp  phpbtp-client.hpp  phpbtp-client.ini  test-endless.php  test-once.php  test.php  test0.php  test3.php
libbtpclient/: CMakeLists.txt
libbtpclient/btpclient/: CMakeLists.txt  btpclient.cpp  btpclient.hpp  btpclient_options.hpp  btpclient_options_json.hpp  btpgateway.cpp  btpgateway.hpp  btpgateway_options.hpp  btpgateway_options_json.hpp  btpglobal.cpp  btpglobal.hpp  btpsharding.cpp  btpsharding.hpp  btpsharding_options.hpp  btpsharding_options_json.hpp  logger.hpp  types.hpp  udpclient.cpp  udpclient.hpp  udpclient_options.hpp  udpclient_options_json.hpp
libbtpclient/tests/: CMakeLists.txt  confgen.cpp  memtest.cpp  pushout_suite.cpp  test_btpclient.cpp  udpclient_suite.cpp
tests/: test.php  test2.php
